<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.sakserv</groupId>
    <artifactId>hadoop-mini-clusters</artifactId>
    <version>0.0.16-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Hadoop Mini Clusters</name>
    <description>Hadoop Mini Clusters for local and unit testing.</description>
    <url>https://github.com/sakserv/hadoop-mini-clusters</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/sakserv/hadoop-mini-clusters.git</connection>
        <developerConnection>scm:git:git@github.com:sakserv/hadoop-mini-clusters.git</developerConnection>
        <url>http://github.com/sakserv/hadoop-mini-clusters</url>
      <tag>HEAD</tag>
  </scm>

    <developers>
        <developer>
            <name>Shane Kumpf</name>
            <email>sakserv@sakserv.org</email>
            <organization>Hortonworks</organization>
            <organizationUrl>http://www.hortonworks.com/</organizationUrl>
        </developer>
    </developers>

    <repositories>
        <repository>
            <id>public.repo.hortonworks.com</id>
            <name>Public Hortonworks Maven Repo</name>
            <url>http://repo.hortonworks.com/content/groups/public/</url>
        </repository>
    </repositories>

    <modules>
        <module>hadoop-mini-clusters-hdfs</module>
        <module>hadoop-mini-clusters-common</module>
        <module>hadoop-mini-clusters-activemq</module>
        <module>hadoop-mini-clusters-yarn</module>
        <module>hadoop-mini-clusters-mapreduce</module>
        <module>hadoop-mini-clusters-hbase</module>
        <module>hadoop-mini-clusters-zookeeper</module>
        <module>hadoop-mini-clusters-hiveserver2</module>
        <module>hadoop-mini-clusters-hivemetastore</module>
        <module>hadoop-mini-clusters-storm</module>
        <module>hadoop-mini-clusters-kafka</module>
        <module>hadoop-mini-clusters-oozie</module>
        <module>hadoop-mini-clusters-mongodb</module>
        <module>hadoop-mini-clusters-hyperscaledb</module>
    </modules>

    <properties>

        <!-- platform encoding override -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- plugin versions -->
        <maven-surefire-plugin.version>2.19</maven-surefire-plugin.version>
        <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
        <maven-release-plugin.version>2.5.1</maven-release-plugin.version>
        <maven-scm-api.version>1.9.2</maven-scm-api.version>
        <maven-scm-provider-gitexe.version>1.9.2</maven-scm-provider-gitexe.version>
        <maven-source-plugin.version>2.4</maven-source-plugin.version>
        <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>

        <!-- dependency versions -->
        <junit.version>4.12</junit.version>
        <slf4j.version>1.7.10</slf4j.version>
        <property-parser.version>0.0.2</property-parser.version>
        <jopt-simple.version>4.8</jopt-simple.version>
        <spring-core.version>4.1.5.RELEASE</spring-core.version>

        <!-- mini cluster module deps -->
        <hadoop-mini-clusters-common.version>0.0.16-SNAPSHOT</hadoop-mini-clusters-common.version>

        <!-- non hadoop deps -->
        <activemq.version>5.10.0</activemq.version>
        <curator.version>2.5.0</curator.version>
        <hsqldb.version>2.3.2</hsqldb.version>
        <mysql-connector-java.version>5.1.34</mysql-connector-java.version>
        <mongo-java-driver.version>2.11.3</mongo-java-driver.version>
        <embedded-mongo.version>1.46.4</embedded-mongo.version>

    </properties>

    <profiles>

        <!-- release signing profile -->
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <!--
            Build profiles to use different versions of Hadoop
        -->

        <!-- Latest - HDP 2.3.0.0 -->
        <profile>
            <id>latest</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <storm.version>0.10.0.2.3.0.0-2557</storm.version>
                <hive.version>1.2.1.2.3.0.0-2557</hive.version>
                <hadoop.version>2.7.1.2.3.0.0-2557</hadoop.version>
                <hbase.version>1.1.1.2.3.0.0-2557</hbase.version>
                <kafka.version>0.8.2.2.3.0.0-2557</kafka.version>
                <oozie.version>4.2.0.2.3.0.0-2557</oozie.version>
            </properties>
        </profile>

    </profiles>

    <dependencies>

        <!-- common deps -->
        <dependency>
            <groupId>com.github.sakserv</groupId>
            <artifactId>hadoop-mini-clusters-common</artifactId>
            <version>${hadoop-mini-clusters-common.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <!-- common testing deps -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.sakserv</groupId>
            <artifactId>property-parser</artifactId>
            <version>${property-parser.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <argLine>-Xms4g -Xmx4g -XX:MaxPermSize=1024M</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.scm</groupId>
                        <artifactId>maven-scm-api</artifactId>
                        <version>${maven-scm-api.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.apache.maven.scm</groupId>
                        <artifactId>maven-scm-provider-gitexe</artifactId>
                        <version>${maven-scm-provider-gitexe.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <distributionManagement>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus snapshot repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>sonatype-nexus-staging</id>
            <name>Sonatype Nexus release repository</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
    
</project>
